--- a/mpv/portable_config/mpv.conf
+++ b/mpv/portable_config/mpv.conf
@@ -33,7 +33,8 @@ deband-grain=0
 
 blend-subtitles=yes
 
-video-sync=display-resample
+rem#video-sync=display-resample (might make videos play too fast)
+
 interpolation=yes
 tscale=oversample
 
