--- a/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
+++ b/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
@@ -1,5 +1,6 @@
 echo "crippling depression"
 
+engine_low_latency_sleep_after_client_tick "1"
 trusted_launch "1"
 cl_allowdownload "0"
 cl_allowupload "0"
@@ -42,6 +43,7 @@ net_client_steamdatagram_enable_override "1"
 net_maxroutable "1260"
 net_steamcnx_allowrelay "1"
 net_steamcnx_enabled "1"
+r_show_build_info "0"
 r_drawtracers_firstperson "0"
 r_dynamic "1"
 r_eyemove "0"
