--- a/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
+++ b/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
@@ -1,8 +1,9 @@
 echo "crippling depression"
 
 cl_autohelp "0"
+cl_hud_color "1"
 clientport "65007"
-engine_low_latency_sleep_after_client_tick "1"
+engine_low_latency_sleep_after_client_tick "0"
 fps_max "0"
 gameinstructor_enable "0"
 joystick "0"
@@ -24,6 +25,13 @@ bind mouse4 "+voicerecord"
 bind mouse5 "use weapon_flashbang"
 bind mwheelup "+jump"
 bind mwheeldown "+jump"
+
+bind "kp_ins" "buy hegrenade"
+bind "kp_del" "buy flashbang"
+bind "kp_enter" "buy vesthelm"
+bind "kp_plus" "buy vest"
+bind "kp_minus" "buy defuser"
+bind "kp_multiply" "buy smokegrenade"
 
 bind uparrow "radio"
 bind leftarrow "radio1"
