--- a/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
+++ b/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
@@ -4,7 +4,7 @@ cl_autohelp "0"
 cl_hud_color "1"
 clientport "65007"
 engine_low_latency_sleep_after_client_tick "0"
-fps_max "0"
+fps_max "999"
 gameinstructor_enable "0"
 joystick "0"
 r_show_build_info "0"
@@ -17,12 +17,13 @@ bind a "+left"
 bind s "+back"
 bind d "+right"
 
-bind z "use weapon_incgrenade;use weapon_molotov"
-bind x "use weapon_smokegrenade"
-bind c "use weapon_decoy"
-bind mouse3 "use weapon_hegrenade"
+bind x "use weapon_incgrenade;use weapon_molotov"
+bind z "use weapon_smokegrenade"
+bind c "use weapon_flashbang"
+vind v "use weapon_hegrenade"
+bind mouse5 "use weapon_hegrenade"
 bind mouse4 "+voicerecord"
-bind mouse5 "use weapon_flashbang"
+bind mouse3 "use weapon_decoy"
 bind mwheelup "+jump"
 bind mwheeldown "+jump"
 
