--- a/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
+++ b/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
@@ -3,6 +3,7 @@ echo "crippling depression"
 cl_autohelp "0"
 cl_hud_color "1"
 clientport "65007"
+con_enable "1"
 engine_low_latency_sleep_after_client_tick "0"
 fps_max "999"
 gameinstructor_enable "0"
