--- a/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
+++ b/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
@@ -7,6 +7,7 @@ con_enable "1"
 engine_low_latency_sleep_after_client_tick "0"
 fps_max "999"
 gameinstructor_enable "0"
+hud_scaling "1"
 joystick "0"
 r_show_build_info "0"
 sensitivity "4"
