--- a/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
+++ b/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
@@ -22,7 +22,7 @@ bind d "+right"
 bind x "use weapon_incgrenade;use weapon_molotov"
 bind z "use weapon_smokegrenade"
 bind c "use weapon_flashbang"
-vind v "use weapon_hegrenade"
+bind v "use weapon_hegrenade"
 bind mouse5 "use weapon_hegrenade"
 bind mouse4 "+voicerecord"
 bind mouse3 "use weapon_decoy"
