--- a/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
+++ b/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
@@ -2,6 +2,8 @@ echo "crippling depression"
 
 cl_autohelp "0"
 cl_hud_color "1"
+cl_hud_radar_scale "1.3"
+cl_radar_scale "0.65"
 clientport "65007"
 con_enable "1"
 engine_low_latency_sleep_after_client_tick "0"
