--- a/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
+++ b/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
@@ -3,7 +3,6 @@ echo "crippling depression"
 cl_autohelp "0"
 cl_hud_color "1"
 cl_hud_radar_scale "1.3"
-cl_radar_scale "0.65"
 clientport "65007"
 con_enable "1"
 engine_low_latency_sleep_after_client_tick "0"
@@ -28,7 +27,7 @@ bind v "use weapon_hegrenade"
 bind mouse5 "use weapon_hegrenade"
 bind mouse4 "+voicerecord"
 bind mouse3 "use weapon_decoy"
-bind mwheelup "+jump"
+unbind mwheelup
 bind mwheeldown "+jump"
 
 bind "kp_ins" "buy hegrenade"
@@ -42,5 +41,6 @@ bind uparrow "radio"
 bind leftarrow "radio1"
 bind downarrow "radio2"
 bind rightarrow "radio3"
+bind "KP_5" "coverme"
 
 viewmodel_presetpos 3
