--- a/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
+++ b/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
@@ -24,6 +24,7 @@ bind x "use weapon_incgrenade;use weapon_molotov"
 bind z "use weapon_smokegrenade"
 bind c "use weapon_flashbang"
 bind v "use weapon_hegrenade"
+bind 4 "use weapon_hegrenade"
 bind mouse5 "use weapon_hegrenade"
 bind mouse4 "+voicerecord"
 bind mouse3 "use weapon_decoy"
