--- a/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
+++ b/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
@@ -25,9 +25,10 @@ bind z "use weapon_smokegrenade"
 bind c "use weapon_flashbang"
 bind v "use weapon_hegrenade"
 bind 4 "use weapon_hegrenade"
+bind alt "use weapon_decoy"
 bind mouse5 "use weapon_hegrenade"
 bind mouse4 "+voicerecord"
-bind mouse3 "use weapon_decoy"
+unbind mouse3
 unbind mwheelup
 bind mwheeldown "+jump"
 
