--- a/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
+++ b/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
@@ -22,13 +22,13 @@ bind a "+left"
 bind s "+back"
 bind d "+right"
 
-bind x "use weapon_incgrenade;use weapon_molotov"
-bind z "use weapon_smokegrenade"
-bind c "use weapon_flashbang"
-bind v "use weapon_hegrenade"
-bind 4 "use weapon_hegrenade"
-bind alt "use weapon_decoy"
-bind mouse5 "use weapon_hegrenade"
+bind x "slot10"
+bind z "slot8"
+bind c "slot7"
+bind v "slot6"
+bind 4 "slot6"
+bind 6 "slot9"
+bind mouse5 "slot6"
 bind mouse4 "+voicerecord"
 unbind mouse3
 unbind mwheelup
