--- a/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
+++ b/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
@@ -34,12 +34,14 @@ unbind mouse3
 unbind mwheelup
 bind mwheeldown "+jump"
 
-bind "kp_ins" "buy hegrenade"
+bind "kp_0" "buy hegrenade"
 bind "kp_del" "buy flashbang"
 bind "kp_enter" "buy vesthelm"
 bind "kp_plus" "buy vest"
 bind "kp_minus" "buy defuser"
 bind "kp_multiply" "buy smokegrenade"
+bind "kp_divide" "buy molotov; buy incgrenade"
+bind "kp_1" "buy decoy"
 
 bind uparrow "radio"
 bind leftarrow "radio1"
