--- a/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
+++ b/Steam/steamapps/common/Counter-Strike Global Offensive/game/core/cfg/autoexec.cfg
@@ -33,6 +33,8 @@ bind mouse4 "+voicerecord"
 unbind mouse3
 unbind mwheelup
 bind mwheeldown "+jump"
+bind 7 "toggle viewmodel_presetpos 3 1"
+bind alt "toggle cl_radar_scale 1 0.3; toggle cl_radar_always_centered 1 0"
 
 bind "kp_0" "buy hegrenade"
 bind "kp_del" "buy flashbang"
