--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -1,6 +1,8 @@
 echo "crippling depression"
 
+cl_allow_animated_avatars "0"
 cl_autohelp "0"
+cl_hide_avatar_images "1"
 cl_hud_color "1"
 cl_hud_radar_scale "1.3"
 cl_radar_always_centered "0"
