--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -5,6 +5,7 @@ cl_autohelp "0"
 cl_hide_avatar_images "1"
 cl_hud_color "1"
 cl_hud_radar_scale "1.3"
+cl_playerspraydisable "1" 
 cl_radar_always_centered "0"
 cl_radar_scale "0.3"
 clientport "65007"
