--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -52,6 +52,10 @@ bind uparrow "radio"
 bind leftarrow "radio1"
 bind downarrow "radio2"
 bind rightarrow "radio3"
+bind del "+radialradio"
+bind end "+radialradio2"
+bind pgdn "+radialradio3"
 bind "KP_5" "coverme"
+bind "KP_6" "getout" 
 
 viewmodel_presetpos 3
