--- a/Half-Life/autoexechq.cfg
+++ b/Half-Life/autoexechq.cfg
@@ -20,26 +20,38 @@ cl_waterdist "4"
 default_fov "90"
 fps_max "99.5"
 fps_override "0"
+gamma "2.5"
 gl_ansio "16"
 gl_dither "0"
 gl_keeptjunctions "1"
+gl_lowlatency "1"
+gl_lowlatency_debugoutput "0"
+gl_lowlatency_maxslop_ms "1"
+gl_lowlatency_minslop_ms "1"
 gl_max_size "8192"
 gl_polyoffset "0.1"
 gl_round_down "0"
+gl_spriteblend "1"
 gl_texturemode "GL_LINEAR_MIPMAP_LINEAR"
+gl_use_shaders "1"
 gl_vsync "0"
+gl_widescreen_yfov "1"
+hisound "1"
+hpk_maxsize "4"
 joystick "0"
 m_customaccel "0"
 m_filter "0"
+m_mousethread_sleep "1"
 m_rawinput "1"
 mp_decals "300"
 name "TyranT"
 r_decals "300"
 r_detailtextures "1
-r_dertailtexturessupported "1"
+r_detailtexturessupported "1"
 r_mirroralpha "0.5"
 r_mmx "1"
 r_novis "1"
+r_prefertexturefiltering "1"
 r_traceglow "1"
 r_wateralpha "0.5"
 rate "100000"
@@ -58,9 +70,13 @@ sv_send_logos "1"
 sv_send_resources "1"
 sys_ticrate "10000"
 tfc_newmodels "0"
++mlook
 
 bind mwheelup "+duck"
 bind mwheeldown "+jump"
 bind mouse4 "+voicerecord"
+
+exec autoexec.cfg
+exec userconfig.cfg
 
 #cl_waterdist will break underwater rendering and movement underwater
