--- a/Half-Life/autoexecperf.cfg
+++ b/Half-Life/autoexecperf.cfg
@@ -20,30 +20,41 @@ cl_waterdist "4"
 default_fov "90"
 fps_max "99.5"
 fps_override "0"
+gamma "3"
 gl_ansio "0"
 gl_dither "1"
 gl_keeptjunctions "1"
+gl_lowlatency "1"
+gl_lowlatency_debugoutput "0"
+gl_lowlatency_maxslop_ms "1"
+gl_lowlatency_minslop_ms "1"
 gl_max_size "512"
 gl_polyoffset "0.1"
 gl_round_down "3"
 gl_texturemode "GL_LINEAR_MIPMAP_NEAREST"
+gl_use_shaders "0"
 gl_vsync "0"
+gl_widescreen_yfov "0"
+hisound "1"
+hpk_maxsize "0"
 joystick "0"
 m_customaccel "0"
 m_filter "0"
+m_mousethread_sleep "1"
 m_rawinput "1"
 mp_decals "0"
 name "TyranT"
 r_decals "0"
 r_detailtextures "0"
-r_dertailtexturessupported "0"
+r_detailtexturessupported "0"
 r_mirroralpha "0.5"
 r_mmx "1"
 r_novis "0"
+r_prefertexturefiltering "0"
 r_traceglow "0"
 r_wateralpha "0.5"
 rate "100000"
-sensitivity 3.5"
+sensitivity 4"
 snd_noextraupdate "1"
 sp_decals "0"
 sv_allow_dlfile "0"
@@ -58,9 +69,13 @@ sv_send_logos "0"
 sv_send_resources "0"
 sys_ticrate "10000"
 tfc_newmodels "0"
++mlook
 
 bind mwheelup "+duck"
 bind mwheeldown "+jump"
 bind mouse4 "+voicerecord"
+
+exec autoexec.cfg
+exec userconfig.cfg
 
 #cl_waterdist will break underwater rendering and movement underwater
