--- a/Half-Life/autoexechq.cfg
+++ b/Half-Life/autoexechq.cfg
@@ -1,6 +1,7 @@
 echo "crippling depression quality"
 
 _snd_mixahead "0.05"
+brightness "0"
 ati_npatch "0"
 cl_allowdownload "0"
 cl_allowupload "0"
