--- a/Half-Life/autoexecperf.cfg
+++ b/Half-Life/autoexecperf.cfg
@@ -2,6 +2,7 @@ echo "crippling depression performance"
 
 _snd_mixahead "0.05"
 ati_npatch "0"
+brightness "3"
 cl_allowdownload "0"
 cl_allowupload "0"
 cl_cmdbackup "2"
