--- a/Half-Life/autoexecperf.cfg
+++ b/Half-Life/autoexecperf.cfg
@@ -31,6 +31,7 @@ gl_lowlatency_maxslop_ms "1"
 gl_lowlatency_minslop_ms "1"
 gl_max_size "512"
 gl_polyoffset "0.1"
+gl_reduce_shader_changes "1"
 gl_round_down "3"
 gl_texturemode "GL_LINEAR_MIPMAP_NEAREST"
 gl_use_shaders "0"
