--- a/Half-Life/autoexechq.cfg
+++ b/Half-Life/autoexechq.cfg
@@ -31,6 +31,7 @@ gl_lowlatency_maxslop_ms "1"
 gl_lowlatency_minslop_ms "1"
 gl_max_size "8192"
 gl_polyoffset "0.1"
+gl_reduce_shader_changes "0"
 gl_round_down "0"
 gl_spriteblend "1"
 gl_texturemode "GL_LINEAR_MIPMAP_LINEAR"
