--- a/Half-Life/autoexechq.cfg
+++ b/Half-Life/autoexechq.cfg
@@ -24,6 +24,7 @@ fps_override "0"
 gamma "2.5"
 gl_ansio "16"
 gl_dither "0"
+gl_fog "1"
 gl_keeptjunctions "1"
 gl_lowlatency "1"
 gl_lowlatency_debugoutput "0"
