--- a/Half-Life/autoexecperf.cfg
+++ b/Half-Life/autoexecperf.cfg
@@ -24,6 +24,7 @@ fps_override "0"
 gamma "3"
 gl_ansio "0"
 gl_dither "1"
+gl_fog "0"
 gl_keeptjunctions "1"
 gl_lowlatency "1"
 gl_lowlatency_debugoutput "0"
