--- a/Half-Life/autoexechq.cfg
+++ b/Half-Life/autoexechq.cfg
@@ -10,6 +10,7 @@ cl_cmdrate "106"
 cl_dlmax "128"
 cl_download_ingame "0"
 cl_filterstuffcmd "1"
+cl_fixmodelinterpolationartifacts "1"
 cl_himodels "1"
 cl_mousegrab "1"
 cl_nosmooth "1"
