--- a/Half-Life/autoexechq.cfg
+++ b/Half-Life/autoexechq.cfg
@@ -82,5 +82,6 @@ bind mouse4 "+voicerecord"
 
 exec autoexec.cfg
 exec userconfig.cfg
+exec violence.cfg
 
 #cl_waterdist will break underwater rendering and movement underwater
