--- a/Half-Life/autoexecperf.cfg
+++ b/Half-Life/autoexecperf.cfg
@@ -81,5 +81,6 @@ bind mouse4 "+voicerecord"
 
 exec autoexec.cfg
 exec userconfig.cfg
+exec violence.cfg
 
 #cl_waterdist will break underwater rendering and movement underwater
