--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -59,7 +59,7 @@ r_prefertexturefiltering "1"
 r_traceglow "1"
 r_wateralpha "0.5"
 rate "100000"
-sensitivity 4"
+sensitivity "4"
 snd_noextraupdate "1"
 sp_decals "300"
 sv_allow_dlfile "0"
