--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -58,7 +58,7 @@ r_prefertexturefiltering "0"
 r_traceglow "0"
 r_wateralpha "0.5"
 rate "100000"
-sensitivity 4"
+sensitivity "4"
 snd_noextraupdate "1"
 sp_decals "0"
 sv_allow_dlfile "0"
