--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -1,8 +1,8 @@
 echo "crippling depression quality"
 
 _snd_mixahead "0.05"
-brightness "0"
 ati_npatch "0"
+brightness "0"
 cl_allowdownload "0"
 cl_allowupload "0"
 cl_cmdbackup "2"
@@ -19,7 +19,9 @@ cl_solid_players "1"
 cl_updaterate "101"
 cl_vsmoothing "0.00"
 cl_waterdist "4"
+crosshair "1"
 default_fov "90"
+ex_interp "0.01"
 fps_max "99.5"
 fps_override "0"
 gamma "2.5"
