--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -19,7 +19,9 @@ cl_solid_players "1"
 cl_updaterate "101"
 cl_vsmoothing "0.00"
 cl_waterdist "4"
+crosshair "1"
 default_fov "90"
+ex_interp "0.01"
 fps_max "99.5"
 fps_override "0"
 gamma "3"
