--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -43,6 +43,8 @@ gl_vsync "0"
 gl_widescreen_yfov "0"
 hisound "1"
 hpk_maxsize "0"
+hud_centerid "1"
+hud_fastswitch "1"
 joystick "0"
 m_customaccel "0"
 m_filter "0"
