--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -44,6 +44,7 @@ gl_vsync "0"
 gl_widescreen_yfov "1"
 hisound "1"
 hpk_maxsize "256"
+hud_centerid "1"
 hud_fastswitch "1"
 joystick "0"
 m_customaccel "0"
