--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -42,7 +42,7 @@ gl_use_shaders "0"
 gl_vsync "0"
 gl_widescreen_yfov "0"
 hisound "1"
-hpk_maxsize "0"
+hpk_maxsize "0.000000001"
 hud_centerid "1"
 hud_fastswitch "1"
 joystick "0"
