--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -19,6 +19,7 @@ cl_dlmax "128"
 cl_download_ingame "0"
 cl_dynamiccrosshair "0"
 cl_filterstuffcmd "1"
+cl_fixmodelinterpolationartifacts "1"
 cl_himodels "1"
 cl_mousegrab "1"
 cl_nosmooth "1"
@@ -41,21 +42,29 @@ gl_affinemodels "0"
 gl_alphamin "0.25"
 gl_ansio "16"
 gl_dither "0"
+gl_fog "1"
 gl_keeptjunctions "1"
+gl_lowlatency "1"
+gl_lowlatency_debugoutput "0"
+gl_lowlatency_maxslop_ms "1"
+gl_lowlatency_minslop_ms "1"
 gl_max_size "16384"
 gl_palette_tex "1"
 gl_picmip "0"
 gl_playermip "0"
 gl_polyoffset "0.1"
+gl_reduce_shader_changes "0"
 gl_round_down "0"
 gl_smoothmodels "1"
 gl_spriteblend "1"
 gl_texturemode "GL_LINEAR_MIPMAP_LINEAR"
+gl_use_shaders "1"
 gl_vsync "0"
+gl_widescreen_yfov "1"
 gl_zmax "4096"
 gl_ztrick_old "0"
 hisound "1"
-hpk_maxsize "0.000000001"
+hpk_maxsize "256"
 hud_centerid "1"
 hud_fastswitch "1"
 joystick "0"
@@ -65,6 +74,7 @@ m_customaccel_exponent "0"
 m_customaccel_max "0"
 m_customaccel_scale "0.00"
 m_filter "0"
+m_mousethread_sleep "1"
 m_rawinput "1"
 max_shells "120"
 max_smokepuffs "120"
@@ -82,6 +92,7 @@ r_dynamic "1"
 r_mirroralpha "1"
 r_mmx "1"
 r_novis "0"
+r_prefertexturefiltering "1"
 r_traceglow "1"
 r_wateralpha "1"
 rate "100000"
