--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -19,6 +19,7 @@ cl_dlmax "128"
 cl_download_ingame "0"
 cl_dynamiccrosshair "0"
 cl_filterstuffcmd "1"
+cl_fixmodelinterpolationartifacts "0"
 cl_himodels "0"
 cl_mousegrab "1"
 cl_nosmooth "1"
@@ -41,17 +42,25 @@ gl_affinemodels "0"
 gl_alphamin "0.25"
 gl_ansio "0"
 gl_dither "1"
+gl_fog "0"
 gl_keeptjunctions "1"
+gl_lowlatency "1"
+gl_lowlatency_debugoutput "0"
+gl_lowlatency_maxslop_ms "1"
+gl_lowlatency_minslop_ms "1"
 gl_max_size "512"
 gl_palette_tex "1"
 gl_picmip "0"
 gl_playermip "0"
 gl_polyoffset "0.1"
+gl_reduce_shader_changes "1"
 gl_round_down "3"
 gl_smoothmodels "1"
 gl_spriteblend "1"
 gl_texturemode "GL_LINEAR_MIPMAP_NEAREST"
+gl_use_shaders "0"
 gl_vsync "0"
+gl_widescreen_yfov "0"
 gl_zmax "4096"
 gl_ztrick_old "0"
 hisound "1"
@@ -65,6 +74,7 @@ m_customaccel_exponent "0"
 m_customaccel_max "0"
 m_customaccel_scale "0.00"
 m_filter "0"
+m_mousethread_sleep "1"
 m_rawinput "1"
 max_shells "120"
 max_smokepuffs "120"
@@ -82,10 +92,11 @@ r_dynamic "1"
 r_mirroralpha "1"
 r_mmx "1"
 r_novis "0"
+r_prefertexturefiltering "0"
 r_traceglow "0"
 r_wateralpha "1"
 rate "100000"
-sensitivity "3.5"
+sensitivity "4"
 setinfo "_ah" "0"
 setinfo "_vgui_menus" "0" 
 snd_noextraupdate "1"
