--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -5,6 +5,7 @@ ati_npatch "0"
 brightness "0"
 cl_allowdownload "0"
 cl_allowupload "0"
+cl_autowepswitch "0"
 cl_cmdbackup "2"
 cl_cmdrate "106"
 cl_dlmax "128"
