--- a/Team Fortress Classic/userconfighq.cfg
+++ b/Team Fortress Classic/userconfighq.cfg
@@ -1,31 +1,58 @@
 echo "crippling depression quality"
 
 _snd_mixahead "0.05"
+ati_npatch "0"
 brightness "1"
 cl_allowdownload "0"
 cl_allowupload "0"
 cl_cmdbackup "2"
 cl_cmdrate "106"
+cl_filterstuffcmd "1"
+cl_fixmodelinterpolationartifacts "1"
 cl_gibcount "4"
 cl_giblife "25"
 cl_himodels "1"
+cl_nosmooth "1"
 cl_smoothtime "0.000"
 cl_updaterate "101"
 cl_vsmoothing "0.000"
+cl_weather "0"
+clientport "65510"
 default_fov "105"
+ex_interp "0.01"
 fps_max "99.5"
 fps_override "0"
+fs_lazy_precache "0"
 gamma "3"
+gl_affinemodels "0"
 gl_ansio "16"
 gl_dither "0"
 gl_fog "1"
+gl_keeptjunctions "1"
+gl_lowlatency "1"
+gl_lowlatency_debugoutput "0"
+gl_lowlatency_maxslop_ms "1"
+gl_lowlatency_minslop_ms "1"
 gl_max_size "8192"
+gl_palette_tex "1"
+gl_picmip "0"
+gl_playermip "0"
+gl_polyoffset "0.1"
+gl_reduce_shader_changes "0"
 gl_round_down "0"
+gl_smoothmodels "1"
 gl_texturemode "GL_LINEAR_MIPMAP_LINEAR"
+gl_use_shaders "1"
 gl_vsync "0"
+gl_widescreen_yfov "1"
+gl_zmax "4096"
+gl_ztrick_old "0"
 hpk_maxsize "0.0000000001"
+hud_centerid "1"
+hud_fastswitch "1"
 joystick "0"
 m_filter "0"
+m_mousethread_sleep "1"
 m_rawinput "1"
 mp_decals "300"
 name "TyranT"
@@ -35,13 +62,25 @@ r_detailtexturessupported "1"
 r_mirroralpha "0.05"
 r_mmx "1"
 r_novis "0"
+r_prefertexturefiltering "1"
+r_traceglow "1"
 r_wateralpha "0.05"
 rate "100000"
 sensitivity "4"
+snd_noextraupdate "1"
+sv_aim "0"
+sv_allow_dlfile "0"
+sv_allowdownload "0"
+sv_allowupload "0"
+sv_cheats "0"
+sv_enableoldqueries "0"
+sv_lan_rate "100000"
 sv_maxrate "0"
 sv_minrate "100000"
 sv_maxupdaterate "101"
 sv_minupdaterate "101"
+sv_send_logos "0"
+sv_send_resources "0"
 sys_ticrate "10000"
 tfc_newmodels "0"
 
