--- a/Team Fortress Classic/userconfighq.cfg
+++ b/Team Fortress Classic/userconfighq.cfg
@@ -7,6 +7,8 @@ cl_allowdownload "0"
 cl_allowupload "0"
 cl_cmdbackup "2"
 cl_cmdrate "106"
+cl_dlmax "128"
+cl_download_ingame "0"
 cl_filterstuffcmd "1"
 cl_fixmodelinterpolationartifacts "1"
 cl_gibcount "4"
