--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -84,4 +84,18 @@ bind mwheelup "+duck"
 bind mwheeldown "+jump"
 bind mouse4 "+voicerecord"
 
+bind 1 "weapon_crowbar"
+bind 2 "weapon_9mmhandgun"
+bind q "weapon_357"
+bind 3 "weapon_9mmAR"
+bind 4 "weapon_shotgun"
+bind 5 "weapon_rpg"
+bind z "weapon_gauss"
+bind x "weapon_egon"
+bind c "weapon_hornetgun"
+bind g "weapon_grenade"
+bind 6 "weapon_satchel"
+bind 7 "weapon_tripmine"
+bind 8 "weapon_snark"
+
 #cl_waterdist will break underwater rendering and movement underwater
