--- a/Team Fortress Classic/userconfighq.cfg
+++ b/Team Fortress Classic/userconfighq.cfg
@@ -86,6 +86,8 @@ sv_send_resources "0"
 sys_ticrate "10000"
 tfc_newmodels "0"
 
+bind shift "+gren1"
+bind alt "+gren2
 bind mouse4 "+gren1"
 bind mouse5 "+gren2"
 bind mwheelup "+duck"
