--- a/Team Fortress Classic/userconfigperf.cfg
+++ b/Team Fortress Classic/userconfigperf.cfg
@@ -81,7 +81,9 @@ sv_send_resources "0"
 sys_ticrate "10000"
 tfc_newmodels "0"
 
-bind mouse4 "+gren1"
-bind mouse5 "+gren2"
+bind shift "+gren1"
+bind alt "+gren2"
+bind mouse4 "+voicerecord"
+bind mouse5 "+gren1"
 bind mwheelup "+duck"
 bind mwheeldown "+jump"
