--- a/Team Fortress Classic/userconfighq.cfg
+++ b/Team Fortress Classic/userconfighq.cfg
@@ -88,6 +88,7 @@ tfc_newmodels "0"
 
 bind shift "+gren1"
 bind alt "+gren2
+bind mouse3 "+gren2"
 bind mouse4 "+voicerecord"
 bind mouse5 "+gren1"
 bind mwheelup "+duck"
