--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -123,7 +123,11 @@ bind mwheeldown "+jump"
 bind mouse4 "+voicerecord"
 bind mouse3 "weapon_hegrenade"
 bind mouse5 "weapon_flashbang"
-bind 4 "weapon_smokegrenade"
+bind z "weapon_hegrenade"
+bind x "weapon_smokegrenade"
+bind c "weapon_hegrenade"
+bind v "weapon_flashbang"
+bind 4 "weapon_hegrenade"
 bind [ "awp;deagle;primammo;secammo"
 bind - "m4a1;ak47;deagle;primammo;secammo"
 bind = "vesthelm;hegren;flash;flash;sgren;defuser"
