--- a/Team Fortress Classic/userconfighq.cfg
+++ b/Team Fortress Classic/userconfighq.cfg
@@ -87,7 +87,7 @@ sys_ticrate "10000"
 tfc_newmodels "0"
 
 bind shift "+gren1"
-bind alt "+gren2
+bind alt "+gren2"
 bind mouse3 "+gren2"
 bind mouse4 "+voicerecord"
 bind mouse5 "+gren1"
