--- a/Quake/enhanced/autoexechq.cfg
+++ b/Quake/enhanced/autoexechq.cfg
@@ -59,7 +59,7 @@ r_slimealpha "0.7"
 r_lavaalpha "0.666"
 r_notextures "0"
 r_generateMipMapsRunTime "1"
-r_textureMode "GL_LINEAR_MIPMAP_LINEAR"
+r_textureMode "GL_NEAREST_MIPMAP_NEAREST"
 r_computenormals "1"
 registered "1"
 r_antialiasing "1"
@@ -84,6 +84,7 @@ vk_assertOnValidationError "0"
 vk_waitOnCommandDuringPresentation "0"
 vk_compileShaders "0"
 
-
+bind mouse_wheel_up "*in_jump"
+bind mouse_wheel_down "*in_jump"
 
 #listvars will show cvarlist
