--- a/Quake/enhanced/autoexechq.cfg
+++ b/Quake/enhanced/autoexechq.cfg
@@ -84,6 +84,8 @@ vk_assertOnValidationError "0"
 vk_waitOnCommandDuringPresentation "0"
 vk_compileShaders "0"
 
+unbind mouse_wheel_up "impulse 10"
+unbind mouse_wheel_down "impulse 12"
 bind mouse_wheel_up "*in_jump"
 bind mouse_wheel_down "*in_jump"
 
