--- a/Quake/enhanced/autoexechq.cfg
+++ b/Quake/enhanced/autoexechq.cfg
@@ -86,7 +86,7 @@ vk_compileShaders "0"
 
 unbind mouse_wheel_up "impulse 10"
 unbind mouse_wheel_down "impulse 12"
-bind mouse_wheel_up "*in_jump"
-bind mouse_wheel_down "*in_jump"
+bind mouse_wheel_up "in_jump 0;in_jump 1""
+bind mouse_wheel_down "in_jump 0;in_jump 1"
 
 #listvars will show cvarlist
