--- a/Quake/enhanced/autoexechq.cfg
+++ b/Quake/enhanced/autoexechq.cfg
@@ -84,7 +84,7 @@ vk_assertOnValidationError "0"
 vk_waitOnCommandDuringPresentation "0"
 vk_compileShaders "0"
 
-bind mouse_wheel_up "in_jump 0;in_jump 1""
-bind mouse_wheel_down "in_jump 0;in_jump 1"
+bind mouse_wheel_up "*in_jump"
+bind mouse_wheel_down "*in_jump"
 
 #listvars will show cvarlist
