--- a/Quake/enhanced/autoexechq.cfg
+++ b/Quake/enhanced/autoexechq.cfg
@@ -9,6 +9,7 @@ cl_engineFPS "999"
 cl_engineHZ "60"
 cl_engineNoSleep "1"
 cl_updateCPUUsageFrequency "1"
+cl_filterstuffcmd "1"
 cl_interpolation "1"
 cl_run "1"
 cl_movelerping "1"
