--- a/Quake/rerelease/autoexecperf.cfg
+++ b/Quake/rerelease/autoexecperf.cfg
@@ -8,7 +8,7 @@ bnet_scEntitlementUnlocked "1"
 cl_engineFPS "999"
 cl_engineHZ "60"
 cl_engineNoSleep "1"
-cl_updateCPUUsageFrequency "1"
+cl_updateCPUUsageFrequency "999999999"
 cl_filterstuffcmd "1"
 cl_interpolation "0"
 cl_run "1"
