--- a/Quake II/rerelease/autoexechq.cfg
+++ b/Quake II/rerelease/autoexechq.cfg
@@ -32,7 +32,7 @@ cl_predict "1"
 cl_updatecpuusagefreqency "999999999"
 cl_usegyros "0"
 g_showintromovie "1"
-in_nojoy "1"
+in_nojoy "0"
 jobs_concurrentthreads "-1"
 jobs_enable "1"
 net_directconn "0"
@@ -68,3 +68,5 @@ v_vsync "0"
 
 bind mwheelup "+moveup"
 bind mwheeldown "+moveup"
+
+#in_nojoy "1" crashes game at launch
