--- a/Quake II/rerelease/autoexecperf.cfg
+++ b/Quake II/rerelease/autoexecperf.cfg
@@ -66,6 +66,8 @@ udp_allowipv6 "0"
 v_refresh "120"
 v_vsync "0"
 
+bind shift "+speed"
+bind ctrl "+movedown"
 bind mwheelup "+moveup"
 bind mwheeldown "+moveup"
 
