--- a/Quake/rerelease/autoexecinterp.cfg
+++ b/Quake/rerelease/autoexecinterp.cfg
@@ -87,6 +87,9 @@ vk_assertOnValidationError "0"
 vk_waitOnCommandDuringPresentation "0"
 vk_compileShaders "0"
 
+unbind mouse_wheel_up "impulse 10"
+unbind mouse_wheel_down "impulse 12"
+
 bind space "*in_jump"
 bind mouse_wheel_up "in_jump 0;in_jump 1"
 bind mouse_wheel_down "in_jump 0;in_jump 1"
