--- a/Quake/rerelease/autoexechq.cfg
+++ b/Quake/rerelease/autoexechq.cfg
@@ -28,7 +28,7 @@ developer "0"
 d3d11_noAltEnter "1"
 d3d11_compileShaders "0"
 g_showintromovie "1"
-in_nojoy "1"
+in_nojoy "0" 
 jobs_enable "1"
 jobs_concurrentThreads "-1"
 net_compress "1"
@@ -95,3 +95,5 @@ bind mouse_wheel_up "in_jump 0;in_jump 1"
 bind mouse_wheel_down "in_jump 0;in_jump 1"
 
 #listvars will show cvarlist
+
+#in_nojoy "1" causes no sound
