--- a/PowerSlave: Exhumed/autoexec.cfg
+++ b/PowerSlave: Exhumed/autoexec.cfg
@@ -10,7 +10,7 @@ cl_mousesmooth "0"
 cl_swapjoysticks "0"
 cl_updatecpuusagefrequency "999999999"
 cl_usegyros "0"
-in_nojoy "1"
+in_nojoy "0"
 g_showintromovie "1"
 jobs_concurrentthreads "-1"
 jobs_enable "1"
@@ -32,3 +32,5 @@ r_rhimaxanisotropic "16"
 r_rhirenderfamily "vulkan"
 v_refresh "120"
 v_vsync "0"
+
+#in_nojoy "1" no sound
