--- a/PowerSlave: Exhumed/autoexec.cfg
+++ b/PowerSlave: Exhumed/autoexec.cfg
@@ -33,6 +33,8 @@ r_rhirenderfamily "vulkan"
 v_refresh "120"
 v_vsync "0"
 
+#listvars is cvarlist
+
 #in_nojoy "1" no sound
 
 #NEEDS MANUALLY LAUNCHED (exec autoexec.cfg)
