--- a/Quake II/rerelease/autoexechq.cfg
+++ b/Quake II/rerelease/autoexechq.cfg
@@ -71,4 +71,6 @@ bind ctrl "+movedown"
 bind mwheelup "+moveup"
 bind mwheeldown "+moveup"
 
+#listvars is cvarlist
+
 #in_nojoy "1" crashes game at launch
