--- a/Quake II/rerelease/autoexecperf.cfg
+++ b/Quake II/rerelease/autoexecperf.cfg
@@ -71,6 +71,6 @@ bind ctrl "+movedown"
 bind mwheelup "+moveup"
 bind mwheeldown "+moveup"
 
-#listvars is cvarlist
+#listvars and cvarlist
 
 #in_nojoy "1" crashes game at launch
