--- a/Quake II/rerelease/autoexecperf.cfg
+++ b/Quake II/rerelease/autoexecperf.cfg
@@ -60,6 +60,7 @@ r_skipfog "1"
 r_skipunderwaterfx "1"
 r_texture_filtering "1"
 s_khz "22"
+s_loadas8bit "1"
 s_use_reverb "0"
 sv_tick_rate "128"
 sensitivity "4"
