--- a/Quake II/rerelease/autoexechq.cfg
+++ b/Quake II/rerelease/autoexechq.cfg
@@ -61,6 +61,7 @@ r_skipunderwaterfx "0"
 r_texture_filtering "1"
 s_khz "22"
 s_use_reverb "1"
+s_loadas8bit "0"
 sv_tick_rate "128"
 sensitivity "4"
 udp_allowipv6 "0"
