--- a/Quake II/rerelease/autoexecperf.cfg
+++ b/Quake II/rerelease/autoexecperf.cfg
@@ -35,6 +35,7 @@ g_showintromovie "1"
 in_nojoy "0"
 jobs_concurrentthreads "-1"
 jobs_enable "1"
+logfile "0"
 maxentities "8192"
 net_directconn "0"
 net_voipmic "0"
