--- a/Quake II/rerelease/autoexechq.cfg
+++ b/Quake II/rerelease/autoexechq.cfg
@@ -21,6 +21,7 @@ cl_run_6 "1"
 cl_run_7 "1"
 aa_allowinterpolate "0"
 aa_enable "0"
+bot_chat_enable "0"
 cl_enginenosleep "1"
 cl_enginehz "60"
 cl_enginefps "999"
