--- a/Quake II/rerelease/autoexechq.cfg
+++ b/Quake II/rerelease/autoexechq.cfg
@@ -22,6 +22,7 @@ cl_run_7 "1"
 aa_allowinterpolate "0"
 aa_enable "0"
 bot_chat_enable "0"
+cl_botChatEnabled "0"
 cl_enginenosleep "1"
 cl_enginehz "60"
 cl_enginefps "999"
