--- a/Quake II/rerelease/autoexecperf.cfg
+++ b/Quake II/rerelease/autoexecperf.cfg
@@ -23,19 +23,19 @@ aa_allowinterpolate "0"
 aa_enable "0"
 bot_chat_enable "0"
 cl_botChatEnabled "0"
-cl_enginenosleep "1"
-cl_enginehz "60"
-cl_enginefps "999"
+cl_engineNoSleep "1"
+cl_engineHZ "60"
+cl_engineFPS "999"
 cl_interpolation "1"
 cl_joysmoothing "0"
 cl_mousesmooth "0"
 cl_packetfps "999"
 cl_predict "1"
-cl_updatecpuusagefrequency "999999999"
+cl_UpdateCPUUsageFrequency "999999999"
 cl_usegyros "0"
 g_showintromovie "1"
 in_nojoy "0"
-jobs_concurrentthreads "-1"
+jobs_concurrentThreads "-1"
 jobs_enable "1"
 logfile "0"
 maxentities "8192"
@@ -51,7 +51,7 @@ r_dof "0"
 r_enablefog "0"
 r_fov "102"
 r_lightgrid "1"
-r_motionblur "0"
+r_motionBlur "0"
 r_particle_square "0"
 r_resolutionscale "0"
 r_resolutionscale_aggressive "0"
@@ -60,7 +60,7 @@ r_rhimaxanisotropic "0"
 r_shadowcachelifetime "999999999"
 r_shadows "0"
 r_skipfog "1"
-r_skipunderwaterfx "1"
+r_skipUnderwaterFX "1"
 r_texture_filtering "1"
 s_khz "22"
 s_loadas8bit "1"
