--- a/Quake II/rerelease/autoexechq.cfg
+++ b/Quake II/rerelease/autoexechq.cfg
@@ -31,14 +31,14 @@ cl_joysmoothing "0"
 cl_mousesmooth "0"
 cl_packetfps "999"
 cl_predict "1"
-cl_UpdateCPUUsageFrequency "999999999"
+cl_updateCPUUsageFrequency "999999999"
 cl_usegyros "0"
 g_showintromovie "1"
 in_nojoy "0"
 jobs_concurrentThreads "-1"
 jobs_enable "1"
 logfile "0"
-maxentites "16384"
+maxentities "16384"
 net_directconn "0"
 net_voipmic "0"
 net_voip "0"
