--- a/Quake II/rerelease/autoexechq.cfg
+++ b/Quake II/rerelease/autoexechq.cfg
@@ -59,8 +59,8 @@ r_rhirenderfamily "vulkan"
 r_rhimaxanisotropic "16"
 r_shadowcachelifetime "999999999"
 r_shadows "1"
-r_skipfog "0"
-r_skipUnderwaterFX "0"
+r_skipFog "0"
+r_skipUnderWaterFX "0"
 r_texture_filtering "1"
 s_khz "22"
 s_use_reverb "1"
