--- a/Quake II/rerelease/autoexecperf.cfg
+++ b/Quake II/rerelease/autoexecperf.cfg
@@ -59,8 +59,8 @@ r_rhirenderfamily "vulkan"
 r_rhimaxanisotropic "0"
 r_shadowcachelifetime "999999999"
 r_shadows "0"
-r_skipfog "1"
-r_skipUnderwaterFX "1"
+r_skipFog "1"
+r_skipUnderWaterFX "1"
 r_texture_filtering "1"
 s_khz "22"
 s_loadas8bit "1"
@@ -78,4 +78,5 @@ bind mwheeldown "+moveup"
 
 #listvars and cvarlist
 
+#cvars are case sensitive
 #in_nojoy "1" crashes game at launch
