--- a/Forsaken Remastered/autoexec.cfg
+++ b/Forsaken Remastered/autoexec.cfg
@@ -22,5 +22,7 @@ r_rhirenderfamily "vulkan"
 r_vertexLighting "1"
 snd_hardwarereverb "1"
 sys_kpfram "1"
+v_borderless "0"
 v_refresh "120"
 v_vsync "0"
+v_windowed "0"
