--- a/Doom 64/autoexec.cfg
+++ b/Doom 64/autoexec.cfg
@@ -24,8 +24,10 @@ r_rhimaxanisotropic "16"
 r_rhirenderfamily "vulkan"
 snd_hardwarereverb "1"
 sys_kpfram "1"
+v_borderless "0"
 v_refresh "120"
 v_vsync "0"
+v_windowed "0"
 
 #listvars is cvarlist
 
