--- a/Forsaken Remastered/autoexec.cfg
+++ b/Forsaken Remastered/autoexec.cfg
@@ -18,7 +18,7 @@ r_nearestFiltering "0"
 r_resolutionscale "0"
 r_resolutionscale_aggressive "0"
 r_rhimaxanisotropic "16"
-r_rhirenderfamily "vulkan"
+r_rhirenderfamily "d3d11"
 r_vertexLighting "1"
 snd_hardwarereverb "1"
 sys_kpfram "1"
@@ -26,3 +26,5 @@ v_borderless "0"
 v_refresh "120"
 v_vsync "0"
 v_windowed "0"
+
+#vulkan render causes graphical glitches
