--- a/Turok/autoexec.cfg
+++ b/Turok/autoexec.cfg
@@ -12,6 +12,7 @@ r_fxaa "0"
 r_lightscatter "1"
 r_rhimaxanisotropic "16"
 r_rhirenderfamily "d3d11"
+r_saturation "1"
 r_simpleactorshadows "1"
 r_water_reflection "1"
 r_water_refraction "1"
