--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -127,7 +127,7 @@ bind z "weapon_hegrenade"
 bind x "weapon_smokegrenade"
 bind c "weapon_hegrenade"
 bind v "weapon_flashbang"
-bind 4 "weapon_hegrenade"
+bind 4 "slot4"
 bind [ "awp;deagle;primammo;secammo"
 bind - "m4a1;ak47;deagle;primammo;secammo"
 bind = "vesthelm;hegren;flash;flash;sgren;defuser"
