--- a/Counter-Strike: Source/autoexechq.cfg
+++ b/Counter-Strike: Source/autoexechq.cfg
@@ -6,7 +6,7 @@ cl_allowupload "0"
 cl_always_flush_models "0"
 cl_autohelp "0"
 cl_autowepswitch "0"
-cl_burninggibs "0"
+cl_burninggibs "1"
 cl_c4dynamiclight "1"
 cl_cmdrate "106"
 cl_customsounds "0"
@@ -195,10 +195,14 @@ cl_dynamiccrosshair "0"
 
 bind mwheelup "+jump"
 bind mwheeldown "+jump"
-bind mouse3 "use weapon_hegrenade"
+bind mouse3 "use weapon_flashbang"
 bind mouse4 "+voicerecord"
-bind mouse5 "use weapon_flashbang"
-bind 4 "use weapon_smokegrenade"
+bind mouse5 "use weapon_hegrenade"
+bind 4 "slot4"
+bind z "use weapon_hegrenade"
+bind x "use weapon_smokegrenade"
+bind c "use weapon_hegrenade"
+bind v "use weapon_flashbang"
 
 bind [ "buy awp; buy deagle"
 bind - "buy m4a1; buy ak47; buy deagle;"
