--- a/Counter-Strike: Source/autoexecfun.cfg
+++ b/Counter-Strike: Source/autoexecfun.cfg
@@ -195,10 +195,14 @@ cl_dynamiccrosshair "0"
 
 bind mwheelup "+jump"
 bind mwheeldown "+jump"
-bind mouse3 "use weapon_hegrenade"
+bind mouse3 "use weapon_flashbang"
 bind mouse4 "+voicerecord"
-bind mouse5 "use weapon_flashbang"
-bind 4 "use weapon_smokegrenade"
+bind mouse5 "use weapon_hegrenade"
+bind 4 "slot4"
+bind z "use weapon_hegrenade"
+bind x "use weapon_smokegrenade"
+bind c "use weapon_hegrenade"
+bind v "use weapon_flashbang"
 
 bind [ "buy awp; buy deagle"
 bind - "buy m4a1; buy ak47; buy deagle;"
