--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -21,6 +21,7 @@ cl_dynamiccrosshair "0"
 cl_filterstuffcmd "1"
 cl_fixmodelinterpolationartifacts "0"
 cl_himodels "0"
+cl_minmodels "1"
 cl_mousegrab "1"
 cl_nosmooth "1"
 cl_radartype "1"
@@ -43,7 +44,7 @@ gl_alphamin "0.25"
 gl_ansio "0"
 gl_dither "1"
 gl_fog "0"
-gl_keeptjunctions "1"
+gl_keeptjunctions "0"
 gl_lowlatency "1"
 gl_lowlatency_debugoutput "0"
 gl_lowlatency_maxslop_ms "1"
@@ -55,7 +56,7 @@ gl_playermip "0"
 gl_polyoffset "0.1"
 gl_reduce_shader_changes "1"
 gl_round_down "3"
-gl_smoothmodels "1"
+gl_smoothmodels "0"
 gl_spriteblend "1"
 gl_texturemode "GL_LINEAR_MIPMAP_NEAREST"
 gl_use_shaders "0"
