--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -21,6 +21,7 @@ cl_dynamiccrosshair "0"
 cl_filterstuffcmd "1"
 cl_fixmodelinterpolationartifacts "1"
 cl_himodels "1"
+cl_minmodels "0"
 cl_mousegrab "1"
 cl_nosmooth "1"
 cl_radartype "1"
