--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -81,6 +81,7 @@ max_shells "120"
 max_smokepuffs "120"
 motdfile "motd.txt"
 mp_decals "300"
+mp_logfile "0"
 MP3FadeTime "0.0"
 MP3Volume "0"
 multicastport "-999999999"
