--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -67,6 +67,7 @@ gl_ztrick_old "0"
 hisound "1"
 hpk_maxsize "0.000000001"
 hud_centerid "1"
+hud_drawhistory_time "1"
 hud_fastswitch "1"
 joystick "0"
 loadas8bit "0"
