--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -67,6 +67,7 @@ gl_ztrick_old "0"
 hisound "1"
 hpk_maxsize "256"
 hud_centerid "1"
+hud_drawhistory_time "5"
 hud_fastswitch "1"
 joystick "0"
 loadas8bit "0"
