--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -69,6 +69,7 @@ hpk_maxsize "256"
 hud_centerid "1"
 hud_drawhistory_time "5"
 hud_fastswitch "1"
+hud_saytext_time "5"
 joystick "0"
 loadas8bit "0"
 m_customaccel "0"
