--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -71,6 +71,7 @@ hud_drawhistory_time "1"
 hud_fastswitch "1"
 hud_saytext_time "1"
 joystick "0"
+joysupported "0"
 loadas8bit "0"
 m_customaccel "0"
 m_customaccel_exponent "0"
