--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -94,6 +94,7 @@ r_decals "300"
 r_detailtextures "1"
 r_detailtexturessupported "1"
 r_dynamic "1"
+r_glowshellfreq "2.2"
 r_mirroralpha "1"
 r_mmx "1"
 r_novis "0"
