--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -94,6 +94,7 @@ r_decals "300"
 r_detailtextures "0"
 r_detailtexturessupported "0"
 r_dynamic "1"
+r_glowshellfreq "0"
 r_mirroralpha "1"
 r_mmx "1"
 r_novis "0"
