--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -106,6 +106,7 @@ sensitivity "4"
 setinfo "_ah" "0"
 setinfo "_vgui_menus" "0" 
 snd_noextraupdate "1"
+sp_decals "0"
 suitvolume "3"
 sv_aim "0"
 sv_allow_dlfile "0"
