--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -113,6 +113,7 @@ sv_allow_dlfile "0"
 sv_allowdownload "0"
 sv_allowupload "0"
 sv_cheats "0"
+sv_clienttrace "0"
 sv_enableoldqueries "0"
 sv_lan_rate "100000"
 sv_maxrate "0"
