--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -123,6 +123,10 @@ sv_minupdaterate "101"
 sv_send_logos "0"
 sv_send_resources "0"
 sys_ticrate "10000"
+violence_ablood "0"
+violence_agibs "0"
+violence_hblood "0"
+violence_hgibs "0"
 volume "3"
 
 bind g "drop"
