--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -123,6 +123,10 @@ sv_minupdaterate "101"
 sv_send_logos "0"
 sv_send_resources "0"
 sys_ticrate "10000"
+violence_ablood "1"
+violence_agibs "1"
+violence_hblood "1"
+violence_hgibs "1"
 volume "3"
 
 bind g "drop"
