--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -95,6 +95,7 @@ r_detailtextures "1"
 r_detailtexturessupported "1"
 r_dynamic "1"
 r_glowshellfreq "2.2"
+r_lightmap "0"
 r_mirroralpha "1"
 r_mmx "1"
 r_novis "0"
