--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -45,6 +45,7 @@ gl_ansio "16"
 gl_dither "0"
 gl_fog "1"
 gl_keeptjunctions "1"
+gl_lightholes "1"
 gl_lowlatency "1"
 gl_lowlatency_debugoutput "0"
 gl_lowlatency_maxslop_ms "1"
