--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -101,6 +101,7 @@ r_mirroralpha "0"
 r_mmx "1"
 r_novis "0"
 r_prefertexturefiltering "1"
+r_shadows "0"
 r_traceglow "0"
 r_wateralpha "1"
 rate "100000"
