--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -101,6 +101,7 @@ r_mirroralpha "1"
 r_mmx "1"
 r_novis "0"
 r_prefertexturefiltering "1"
+r_shadows "1"
 r_traceglow "1"
 r_wateralpha "1"
 rate "100000"
