--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -32,18 +32,24 @@ cl_solid_players "1"
 cl_updaterate "101"
 cl_vsmoothing "0"
 cl_weather "0"
+d_mipcap "3"
+d_spriteskip "1"
+d_mipscale "3"
 clientport "65510"
 crosshair "1"
 con_mono "0"
 default_fov "90"
 ex_interp "0.01"
+fastsprites "2"
 fps_max "99.5"
 fs_lazy_precache "0"
 gamma "3"
 gl_affinemodels "0"
 gl_alphamin "0.25"
 gl_ansio "0"
+gl_cull "1"
 gl_dither "1"
+gl_flipmatrix "0"
 gl_fog "0"
 gl_keeptjunctions "0"
 gl_lightholes "1"
@@ -51,27 +57,28 @@ gl_lowlatency "1"
 gl_lowlatency_debugoutput "0"
 gl_lowlatency_maxslop_ms "1"
 gl_lowlatency_minslop_ms "1"
-gl_max_size "512"
+gl_max_size "128"
 gl_palette_tex "1"
-gl_picmip "0"
-gl_playermip "0"
+gl_picmip "3"
+gl_playermip "3"
 gl_polyoffset "0.1"
 gl_reduce_shader_changes "1"
-gl_round_down "3"
+gl_round_down "5"
 gl_smoothmodels "0"
-gl_spriteblend "1"
+gl_spriteblend "0"
 gl_texturemode "GL_LINEAR_MIPMAP_NEAREST"
 gl_use_shaders "0"
 gl_vsync "0"
 gl_widescreen_yfov "0"
 gl_zmax "4096"
 gl_ztrick_old "0"
+gunsmoke "0"
 hisound "1"
 hpk_maxsize "0.000000001"
 hud_centerid "1"
-hud_drawhistory_time "1"
+hud_drawhistory_time "0"
 hud_fastswitch "1"
-hud_saytext_time "1"
+hud_saytext_time "0"
 joystick "0"
 joysupported "0"
 loadas8bit "0"
