--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -32,18 +32,24 @@ cl_solid_players "1"
 cl_updaterate "101"
 cl_vsmoothing "0"
 cl_weather "0"
+d_mipcap "0"
+d_spriteskip "0"
+d_mipscale "0"
 clientport "65510"
 crosshair "1"
 con_mono "0"
 default_fov "90"
 ex_interp "0.01"
+fastsprites "0"
 fps_max "99.5"
 fs_lazy_precache "0"
 gamma "3"
 gl_affinemodels "0"
 gl_alphamin "0.25"
 gl_ansio "16"
+gl_cull "0"
 gl_dither "0"
+gl_flipmatrix "0"
 gl_fog "1"
 gl_keeptjunctions "1"
 gl_lightholes "1"
@@ -66,6 +72,7 @@ gl_vsync "0"
 gl_widescreen_yfov "1"
 gl_zmax "4096"
 gl_ztrick_old "0"
+gunsmoke "1"
 hisound "1"
 hpk_maxsize "256"
 hud_centerid "1"
