--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -1,5 +1,6 @@
 echo "crippling depression quality"
 echo "r_dynamic and r_lightmap are locked"
+echo "gl_max_size 256 is lowest value"
 
 _cl_autowepswitch "0"
 _setaddons_folder "0"
