--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -1,5 +1,6 @@
 echo "crippling depression performance"
 echo "r_dynamic and r_lightmap are locked"
+echo "gl_max_size 256 is lowest value"
 
 _cl_autowepswitch "0"
 _setaddons_folder "0"
@@ -57,7 +58,7 @@ gl_lowlatency "1"
 gl_lowlatency_debugoutput "0"
 gl_lowlatency_maxslop_ms "1"
 gl_lowlatency_minslop_ms "1"
-gl_max_size "128"
+gl_max_size "256"
 gl_palette_tex "1"
 gl_picmip "3"
 gl_playermip "3"
