--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -119,6 +119,7 @@ setinfo "_ah" "0"
 setinfo "_vgui_menus" "0" 
 snd_noextraupdate "1"
 sp_decals "4096"
+speak_enabled "1"
 suitvolume "3"
 sv_aim "0"
 sv_allow_dlfile "0"
