--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -67,6 +67,7 @@ rate "100000"
 sensitivity "4"
 snd_noextraupdate "1"
 sp_decals "300"
+speak_enabled "1"
 sv_allow_dlfile "0"
 sv_allowdownload "0"
 sv_allowupload "0"
