--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -66,6 +66,7 @@ rate "100000"
 sensitivity "4"
 snd_noextraupdate "1"
 sp_decals "0"
+speak_enabled "0"
 sv_allow_dlfile "0"
 sv_allowdownload "0"
 sv_allowupload "0"
