--- a/Team Fortress Classic/userconfighq.cfg
+++ b/Team Fortress Classic/userconfighq.cfg
@@ -70,6 +70,8 @@ r_wateralpha "0.05"
 rate "100000"
 sensitivity "4"
 snd_noextraupdate "1"
+sp_decals "300"
+speak_enabled "1"
 sv_aim "0"
 sv_allow_dlfile "0"
 sv_allowdownload "0"
