--- a/Team Fortress Classic/userconfigperf.cfg
+++ b/Team Fortress Classic/userconfigperf.cfg
@@ -65,6 +65,8 @@ r_wateralpha "0.05"
 rate "100000"
 sensitivity "4"
 snd_noextraupdate "1"
+sp_decals "0"
+speak_enabled "0"
 sv_aim "0"
 sv_allow_dlfile "0"
 sv_allowdownload "0"
