--- a/Team Fortress Classic/userconfigperf.cfg
+++ b/Team Fortress Classic/userconfigperf.cfg
@@ -11,8 +11,8 @@ cl_dlmax "128"
 cl_download_ingame "0"
 cl_filterstuffcmd "1"
 cl_fixmodelinterpolationartifacts "0"
-cl_gibcount "4"
-cl_giblife "25"
+cl_gibcount "0"
+cl_giblife "0"
 cl_himodels "0"
 cl_nosmooth "1"
 cl_smoothtime "0.000"
@@ -28,18 +28,18 @@ gl_affinemodels "0"
 gl_ansio "0"
 gl_dither "1"
 gl_fog "0"
-gl_keeptjunctions "1"
+gl_keeptjunctions "0"
 gl_lowlatency "1"
 gl_lowlatency_debugoutput "0"
 gl_lowlatency_maxslop_ms "1"
 gl_lowlatency_minslop_ms "1"
-gl_max_size "512"
+gl_max_size "256"
 gl_palette_tex "1"
-gl_picmip "0"
-gl_playermip "0"
+gl_picmip "3"
+gl_playermip "3"
 gl_polyoffset "0.1"
 gl_reduce_shader_changes "1"
-gl_round_down "3"
+gl_round_down "5"
 gl_texturemode "GL_LINEAR_MIPMAP_NEAREST"
 gl_use_shaders "0"
 gl_vsync "0"
@@ -52,7 +52,7 @@ m_filter "0"
 m_mousethread_sleep "1"
 m_rawinput "1"
 mp_decals "0"
-name "TyranT"
+name "TyranT🜨"
 r_decals "0"
 r_detailtextures "0"
 r_detailtexturessupported "0"
