--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -1,6 +1,6 @@
 echo "crippling depression performance"
 
-_snd_mixahead "0.05"
+_snd_mixahead "0.01"
 ati_npatch "0"
 brightness "3"
 cl_allowdownload "0"
@@ -29,15 +29,15 @@ gamma "3"
 gl_ansio "0"
 gl_dither "1"
 gl_fog "0"
-gl_keeptjunctions "1"
+gl_keeptjunctions "0"
 gl_lowlatency "1"
 gl_lowlatency_debugoutput "0"
 gl_lowlatency_maxslop_ms "1"
 gl_lowlatency_minslop_ms "1"
-gl_max_size "512"
+gl_max_size "256"
 gl_polyoffset "0.1"
 gl_reduce_shader_changes "1"
-gl_round_down "3"
+gl_round_down "5"
 gl_texturemode "GL_LINEAR_MIPMAP_NEAREST"
 gl_use_shaders "0"
 gl_vsync "0"
@@ -52,7 +52,7 @@ m_filter "0"
 m_mousethread_sleep "1"
 m_rawinput "1"
 mp_decals "0"
-name "TyranT"
+name "TyranT🜨"
 r_decals "0"
 r_detailtextures "0"
 r_detailtexturessupported "0"
