--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -53,7 +53,7 @@ m_filter "0"
 m_mousethread_sleep "1"
 m_rawinput "1"
 mp_decals "300"
-name "TyranT"
+name "TyranT🜨"
 r_decals "300"
 r_detailtextures "1
 r_detailtexturessupported "1"
