--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -98,7 +98,7 @@ mp_logfile "0"
 MP3FadeTime "0.0"
 MP3Volume "0"
 multicastport "-999999999"
-name "TyranT"
+name "TyranT🜨"
 net_graphpos "2"
 r_decals "4096"
 r_detailtextures "1"
