--- a/Team Fortress Classic/userconfigperf.cfg
+++ b/Team Fortress Classic/userconfigperf.cfg
@@ -1,4 +1,6 @@
 echo "crippling depression performance"
+echo "r_dynamic and r_lightmap are locked"
+echo "gl_max_size 256 is lowest value"
 
 _snd_mixahead "0.01"
 ati_npatch "0"
