--- a/Counter-Strike: Source/autoexecperf.cfg
+++ b/Counter-Strike: Source/autoexecperf.cfg
@@ -20,6 +20,7 @@ cl_interp "0.01"
 cl_interp_all "0"
 cl_interp_ratio "1"
 cl_localnetworkbackdoor "0"
+cl_minmodels "1"
 cl_new_impact_effects "0"
 cl_phys_props_enable "0"
 cl_phys_props_max "0"
