--- a/Counter-Strike: Source/autoexecfun.cfg
+++ b/Counter-Strike: Source/autoexecfun.cfg
@@ -1,4 +1,11 @@
 echo "crippling depression fun"
+echo "cl_interp 0.015152 for 66tic servers"
+echo "r_queued_decals 1 causes crashes"
+echo "cl_allowdownload 0 causes black screen on join for some servers"
+echo "r_waterdraw cvars cause black water and water glitches when disabled" 
+
+echo "ragdolls and water are enabled for fun config"
+
 
 blink_duration "0"
 cl_allowdownload "0"
@@ -152,7 +159,7 @@ r_rootlod "2"
 r_shader_srgb "0"
 r_shadowmaxrendered "32"
 r_shadowrendertotexture "0"
-r_shadows "1"
+r_shadows "0"
 r_staticprop_lod "7"
 r_teeth "0"
 r_threaded_client_shadow_manager "1"
@@ -169,9 +176,9 @@ rope_smooth "0"
 rope_shake "0"
 rope_subdiv "1"
 rope_wind_dist "1"
-sensitivity "3.1"
+sensitivity "4"
 snd_async_fullyasync "1"
-snd_mixahead "0.05"
+snd_mixahead "0.01"
 snd_pitchquality "0"
 snd_defer_trace "1"
 snd_disable_mixer_duck "1"
@@ -210,10 +217,3 @@ bind - "buy m4a1; buy ak47; buy deagle;"
 bind = "buy vesthelm; buy hegrenade; buy flashbang; buy flashbang; buy smokegrenade; buy defuser"
 
 unbind f
-
-#cl_interp-"0.015152"
-#r_queued_decals 1 causes crashes
-#cl_allowdownload 0 causes black screen on join for some servers
-#r_waterdraw cvars cause black water and water glitches when disabled 
-
-#ragdolls and water are enabled for fun config
