--- a/Counter-Strike: Source/autoexechq.cfg
+++ b/Counter-Strike: Source/autoexechq.cfg
@@ -1,4 +1,9 @@
 echo "crippling depression quality"
+echo "cl_interp 0.015152 for 66tic servers"
+echo "r_queued_decals 1 causes crashes"
+echo "cl_allowdownload 0 causes black screen on join for some servers"
+echo "r_waterdraw cvars cause black water and water glitches when disabled"
+
 
 blink_duration "0.2"
 cl_allowdownload "0"
@@ -210,8 +215,3 @@ bind - "buy m4a1; buy ak47; buy deagle;"
 bind = "buy vesthelm; buy hegrenade; buy flashbang; buy flashbang; buy smokegrenade; buy defuser"
 
 bind f "impulse 100"
-
-#cl_interp-"0.015152"
-#r_queued_decals 1 causes crashes
-#cl_allowdownload 0 causes black screen on join for some servers
-#r_waterdraw cvars cause black water and water glitches when disabled
