--- a/Half-Life 2/autoexechq.cfg
+++ b/Half-Life 2/autoexechq.cfg
@@ -1,4 +1,10 @@
 echo "crippling depression half life"
+echo "mat_max_worldmesh_vertices more than 9 nines causes (too many vertex format changes in frame, whole world not rendered) with missing textures in point insertion (d1_trainstation_02)"
+echo "cl_detaildist and cl_detailfade return to default values on map load"
+echo "r_maxmodeldecal large values crash game"
+echo "r_queued_decals 1 causes crashing"
+
+
 
 blink_duration "0.2"
 cl_allowdownload "0"
@@ -193,8 +199,3 @@ tv_enable "0"
 
 bind mwheelup "+jump"
 bind mwheeldown "+jump"
-
-#mat_max_worldmesh_vertices more than 9 nines causes "too many vertex format changes in frame, whole world not rendered" with missing textures in point insertion (d1_trainstation_02)
-#cl_detaildist and cl_detailfade return to default values on map load
-#r_maxmodeldecal large values crash game
-#r_queued_decals 1 causes crashing
