--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -1,6 +1,7 @@
 echo "crippling depression quality"
 echo "r_dynamic and r_lightmap are locked"
 echo "gl_max_size 256 is lowest value"
+echo "cl_waterdist will break underwater rendering and movement underwater"
 
 _snd_mixahead "0.01"
 ati_npatch "0"
@@ -101,5 +102,3 @@ bind g "weapon_grenade"
 bind 6 "weapon_satchel"
 bind 7 "weapon_tripmine"
 bind 8 "weapon_snark"
-
-#cl_waterdist will break underwater rendering and movement underwater
