--- a/Left 4 Dead 2/autoexec.cfg
+++ b/Left 4 Dead 2/autoexec.cfg
@@ -1,4 +1,5 @@
 echo "crippling depression"
+echo "cl_interp 0.03 for 33tic servers"
 
 cl_allowdownload "0"
 cl_allowupload "0"
@@ -12,7 +13,7 @@ cl_crosshair_red "50"
 cl_crosshair_thickness "0"
 cl_downloadfilter "all"
 cl_forcepreload "1"
-cl_interp "0.1"
+cl_interp "0.03"
 cl_interp_ratio "1"
 cl_playerspraydisable "1"
 cl_showhelp "0"
@@ -32,8 +33,8 @@ m_rawinput "1"
 mat_queue_mode "2"
 net_maxroutable "1260"
 rate "1048576"
-sensitivity "3.5"
-snd_mixahead "0.05"
+sensitivity "4"
+snd_mixahead "0.01"
 sv_forcepreload "1"
 sv_lan "1"
 sv_maxcmdrate "128"
