--- a/Team Fortress 2/autoexechq.cfg
+++ b/Team Fortress 2/autoexechq.cfg
@@ -1,4 +1,6 @@
 echo "crippling depression quality"
+echo "r_queued_decals 1 causes crashing"
+echo "r_queued_post_processing causes graphic glitches when enabled"
 
 blink_duration "0.2"
 cl_allowdownload "0"
@@ -208,6 +210,3 @@ sys_minidumpspewlines "0"
 bind mwheelup "+jump"
 bind mwheeldown "+jump"
 bind mouse4 "+voicerecord"
-
-#r_queued_decals 1 causes crashing
-#r_queued_post_processing causes graphic glitches when enabled
