--- a/Team Fortress 2/autoexecperf.cfg
+++ b/Team Fortress 2/autoexecperf.cfg
@@ -1,4 +1,5 @@
 echo "crippling depression performance"
+echo "r_waterdraw cvars prevent seeing in water if 0"
 
 blink_duration "0"
 cl_allowdownload "0"
@@ -208,5 +209,3 @@ sys_minidumpspewlines "0"
 bind mwheelup "+jump"
 bind mwheeldown "+jump"
 bind mouse4 "+voicerecord"
-
-#r_waterdraw cvars prevent seeing in water if 0
