--- a/Team Fortress 2/autoexecperf.cfg
+++ b/Team Fortress 2/autoexecperf.cfg
@@ -176,9 +176,10 @@ rope_smooth "0"
 rope_shake "0"
 rope_subdiv "1"
 rope_wind_dist "1"
+sensitivity "4"
 snd_async_fullyasync "1"
 snd_async_spew_blocking "0"
-snd_mixahead "0.05"
+snd_mixahead "0.01"
 snd_pitchquality "0"
 snd_defer_trace "1"
 snd_disable_mixer_duck "1"
