--- a/Counter-Strike: Source/autoexecpro.cfg
+++ b/Counter-Strike: Source/autoexecpro.cfg
@@ -127,6 +127,7 @@ r_drawflecks "0"
 r_drawtracers_firstperson "0"
 r_decalstaticprops "0"
 r_drawdetailprops "0"
+r_dynamic "1"
 r_eyegloss "0"
 r_eyemove "0"
 r_eyes "0"
