--- a/Counter-Strike: Source/autoexechq.cfg
+++ b/Counter-Strike: Source/autoexechq.cfg
@@ -126,6 +126,7 @@ r_decalstaticprops "1"
 r_drawdetailprops "1"
 r_drawflecks "1"
 r_drawtracers_firstperson "0"
+r_dynamic "1"
 r_eyegloss "1"
 r_eyemove "1"
 r_eyes "1"
