--- a/Counter-Strike: Source/autoexecfun.cfg
+++ b/Counter-Strike: Source/autoexecfun.cfg
@@ -116,6 +116,7 @@ mod_load_vcollide_async "1"
 mod_forcetouchdata "1"
 mod_forcedata "1"
 mod_touchalldata "1"
+name "TyranT🜨"
 net_maxpacketdrop "0"
 net_compresspackets_minsize "1260"
 net_maxfragments "1260"
