--- a/Half-Life 2/autoexechq.cfg
+++ b/Half-Life 2/autoexechq.cfg
@@ -119,7 +119,7 @@ net_maxfragments "1260"
 net_maxroutable "1260"
 net_maxpacketdrop "0"
 mp_decals "999999999999999999999999999"
-name "TyranT"
+name "TyranT🜨"
 r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
 r_decals "999999999999999999999999999"
