--- a/Left 4 Dead 2/autoexec.cfg
+++ b/Left 4 Dead 2/autoexec.cfg
@@ -31,6 +31,7 @@ m_mouseaccel2 "0"
 m_mousespeed "0"
 m_rawinput "1"
 mat_queue_mode "2"
+name "TyranT🜨"
 net_maxroutable "1260"
 rate "1048576"
 sensitivity "4"
