--- a/Team Fortress 2/autoexechq.cfg
+++ b/Team Fortress 2/autoexechq.cfg
@@ -117,6 +117,7 @@ mod_forcetouchdata "1"
 mod_forcedata "1"
 mod_touchalldata "1"
 mod_offline_hdr_switch "1"
+name "TyranT🜨"
 net_compresspackets_minsize "1260"
 net_maxfragments "1260"
 net_maxroutable "1260"
