--- a/Team Fortress 2/autoexecperf.cfg
+++ b/Team Fortress 2/autoexecperf.cfg
@@ -116,6 +116,7 @@ mod_forcetouchdata "1"
 mod_forcedata "1"
 mod_offline_hdr_switch "1"
 mod_touchalldata "1"
+name "TyranT🜨"
 net_maxpacketdrop "0"
 net_compresspackets_minsize "1260"
 net_maxfragments "1260"
