--- a/Counter-Strike: Source/autoexechq.cfg
+++ b/Counter-Strike: Source/autoexechq.cfg
@@ -185,6 +185,11 @@ snd_disable_mixer_duck "1"
 snd_noextraupdate "1"
 snd_async_spew_blocking "0"
 
+violence_ablood "1"
+violence_agibs "1"
+violence_hblood "1"
+violence_hgibs "1"
+
 sv_allowdownload "0"
 sv_allowupload "0"
 sv_lan "1"
