--- a/Counter-Strike: Source/autoexecpro.cfg
+++ b/Counter-Strike: Source/autoexecpro.cfg
@@ -186,6 +186,11 @@ snd_disable_mixer_duck "1"
 snd_noextraupdate "1"
 snd_async_spew_blocking "0"
 
+violence_ablood "1"
+violence_agibs "1"
+violence_hblood "1"
+violence_hgibs "1"
+
 sv_allowdownload "0"
 sv_allowupload "0"
 sv_forcepreload "1"
